[package]
name = "rhub"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["akhercha <me@akhercha.sh>"]
description = "CLI tool that automatically creates github repositories from local folders"
readme = "README.md"
homepage = "https://github.com/akhercha/rhub"
repository = "https://github.com/akhercha/rhub"
keywords = ["cli", "push", "create", "repository"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
reqwest = "0.11.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio = { version = "1.32.0", features = ["full"] }
